--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,10 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap');
 
+ 
 @import "tailwindcss";
+
+
 
 @theme{
   --color-primary:#2563EB;
@@ -15,6 +19,6 @@
   font-family: Playfair !important;
 }
 
-html, body, #root {
+/* html, body, #root {
   height: 100%;
-}
+} */
